# simple-str

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: SimpleStr.hpp
tests/: test_simplestr.cpp
